--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cloudinary": "^2.7.0",
+    "color-name-list": "^12.1.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -29,6 +30,7 @@
     "telegraf": "^4.16.3",
     "telegram-mtproto": "^1.0.5",
     "uuid": "^11.1.0",
+    "xlsx": "^0.18.5",
     "yookassa": "^0.1.1"
   },
   "devDependencies": {
