--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+  "helmet": "^6.0.1",
+  "express-rate-limit": "^6.8.0",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "handlebars": "^4.7.8",
