--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "typescript": "^5.7.3"
   },
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node dist/app.js",
     "dev": "nodemon src/app.ts",
     "build": "tsc"
   },
